Fix wrapping dropdown in subcontracts modal

--- a/src/app/modules/subcontracts/components/subcontract-modal/subcontract-modal.component.scss
+++ b/src/app/modules/subcontracts/components/subcontract-modal/subcontract-modal.component.scss
@@ -85,3 +85,7 @@
     display: inline;
   }
 }
+
+::ng-deep .sub_contract_input .p-select-option {
+  white-space: normal !important;
+}
